--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "moment": "^2.29.1",
     "react": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-pager-view": "^5.4.0",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.5.0",
