--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@react-navigation/bottom-tabs": "^6.0.2",
     "@react-navigation/material-top-tabs": "^6.0.2",
     "@react-navigation/native": "^6.0.2",
+    "axios": "^0.21.1",
     "moment": "^2.29.1",
     "react": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-dotenv": "^3.2.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-pager-view": "^5.4.0",
